--- a/war/Skywalker.css
+++ b/war/Skywalker.css
@@ -28,6 +28,14 @@ h1 {
   color: red;
 }
 
+.gwt-label {
+  color: blue;
+  font-size: 14px;
+  /**font-family: Verdana;
+  text-align: center;
+  text-decoration: underline;*/
+}
+
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
