Finishing touches to the style of the favorites buttons. All thats left is the click actions.

--- a/war/Skywalker.css
+++ b/war/Skywalker.css
@@ -36,6 +36,12 @@ h1 {
   text-decoration: underline;*/
 }
 
+.gwt-ToggleButton {
+  color: blue;
+  font-size: 16px;
+  vertical-align: middle;
+}
+
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
