--- a/war/Skywalker.css
+++ b/war/Skywalker.css
@@ -29,8 +29,8 @@ h1 {
 }
 
 .gwt-label {
-  color: blue;
-  font-size: 14px;
+  color: black;
+  font-size: 16px;
   /**font-family: Verdana;
   text-align: center;
   text-decoration: underline;*/
